syntax = "proto3";

package admin;

service AdminService {
  rpc CreateAdmin(CreateAdminRequest) returns (AdminResponse);
  rpc LoginAdmin(LoginAdminRequest) returns (TokenResponse);
}

message Admin {
  string email = 1;
}

message CreateAdminRequest {
  string email = 1;
  string password = 2;
}

message LoginAdminRequest {
  string email = 1;
  string password = 2;
}

message AdminResponse {
  Admin admin = 1;
}

message TokenResponse {
  string token = 1;
}
